--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -28,11 +28,37 @@
 
                     <div class="col-lg-6 col-5 ms-auto">
                         <ul class="social-icon">
+                            <!-- <div class="pie">
+                                <img src="../assets/images/L1.png" >
+                            </div>     -->
+                            <!-- <li>
+                                <div class="pie">
+                                    <img src="../assets/images/L1.png" >
+                                </div> 
+
+                            </li> -->
+
                             <li><a href="https://www.facebook.com/fonelli.joyeria/" class="social-icon-link bi-facebook"></a></li>
+                            <li>
+                                <a href="https://www.facebook.com/fonelli.joyeria/" class="social-icon-link ">
+                                    <div class="pie">
+                                        <img src="../assets/images/L1.png" >
+                                    </div> 
+                                </a>
+
+                            </li>
 
                             <!-- <li><a href="#" class="social-icon-link bi-whatsapp"></a></li> -->
 
                             <li><a href="https://www.instagram.com/fonelli.joyeria/" class="social-icon-link bi-instagram"></a></li>
+                            <li>
+                                <a href="https://www.facebook.com/fonelli.joyeria/" class="social-icon-link ">
+                                    <div class="pie">
+                                        <img src="../assets/images/T2.png" >
+                                    </div> 
+                                </a>
+
+                            </li>
 
                             <!-- <li><a href="#" class="social-icon-link bi-youtube"></a></li> -->
                         </ul>
