--- a/src/assets/css/bootstrap/bootstrap-reboot.css
+++ b/src/assets/css/bootstrap/bootstrap-reboot.css
@@ -152,8 +152,8 @@ svg {
   overflow: hidden;
   vertical-align: middle; }
 
-table {
-  border-collapse: collapse; }
+/* table {
+  border-collapse: collapse; } */
 
 caption {
   padding-top: 0.75rem;
