--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
 
   <!-- <section id="content"> -->
     <router-outlet></router-outlet>
+    <!-- <ngbd-table-pagination></ngbd-table-pagination> -->
     
     <!-- </section> -->
 
