--- a/src/app/components/consultaprecios/consultaprecios.component.html
+++ b/src/app/components/consultaprecios/consultaprecios.component.html
@@ -13,7 +13,8 @@
   <mat-sidenav-container class="example-sidenav-container"
                          [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
     <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
-                 [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
+                 [fixedInViewport]="mobileQuery.matches" fixedTopGap="56"
+                 [opened]="mobileQuery.matches ? 'false' : 'true'">
       <mat-nav-list>
       
         <a mat-list-item [routerLink]="['/distribuidores/']">Inicio</a>
@@ -22,8 +23,8 @@
         <a mat-list-item [routerLink]="['/distribuidores/consultapedidos/']">Consulta de Pedidos</a>
         <a mat-list-item [routerLink]="['/distribuidores/relacionpedidos/']">Relación de Pedidos</a>
         <a mat-list-item [routerLink]="['/distribuidores/estadocuenta/']">Estado de Cuenta</a>
-        <a mat-list-item [routerLink]="['/distribuidores/ventasclientearticulo/']">Ventas por Cliente y Artículo</a>
-        <a mat-list-item href="http://www.catalogofonelli.com.mx/" target="_blank">Catálogo de Joyería</a>
+        <a mat-list-item [routerLink]="['/distribuidores/ventasclientearticulo/']">Ventas por Artículo</a>
+        
       </mat-nav-list>
     </mat-sidenav>
 
@@ -42,12 +43,28 @@
 
                   <div class="form-row">
                       <div class="form-group col-md-6">
-                        <label for="inputEmail4">Numero</label>
-                        <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                        <label>Numero</label>
+                        <input 
+                          type="text" 
+                          id="idNumpPre"
+                          class="form-control"
+                          name="idNumpPre"
+                          #nombre="ngModel"
+                          [(ngModel)]="oBuscar.ClienteCodigo"
+                          required
+                        >
                       </div>
                       <div class="form-group col-md-6">
-                        <label for="inputPassword4">Filial</label>
-                        <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                        <label >Filial</label>
+                        <input
+                          type="text" 
+                          id="idFilPre"
+                          class="form-control"
+                          name="idFilPre"
+                          #nombre="ngModel"
+                          [(ngModel)]="oBuscar.ClienteFilial"
+                          required
+                        >
                       </div>
                       <div class="form-group col-md-6">
                           <button type="submit" class="btn btn-primary">CATALOGO DE CLIENTES</button>
@@ -60,9 +77,15 @@
                   <div class="form-row">
                       <div class="form-group col-md-6">
                         <label for="inputEmail4">No de lista</label>
-                        <select class="form-select" aria-label="Default select example">
-                          <option value="1">Lista 1</option>
-                          <option value="2">Lista 2</option>
+                        <select 
+                          class="form-select" 
+                          name="idListaPre"
+                          #nombre="ngModel"
+                          [(ngModel)]="oBuscar.Lista"
+                          required
+                        >
+                          <option value="Lista 1">Lista 1</option>
+                          <option value="Lista 2">Lista 2</option>
                           
                         </select>
                       </div>
@@ -74,10 +97,16 @@
 
                   <div class="form-row">
                       <div class="form-group col-md-6">
-                        <label for="inputEmail4">Tipo de paridad</label>
-                        <select class="form-select" aria-label="Default select example">
-                          <option value="1">Normal</option>
-                          <option value="2">Especial</option>
+                        <label >Tipo de paridad</label>
+                        <select 
+                          class="form-select"
+                          name="idParidadPre"
+                          #nombre="ngModel"
+                          [(ngModel)]="oBuscar.Paridad"
+                          required
+                        >
+                          <option value="Normal">Normal</option>
+                          <option value="Especial">Especial</option>
                           
                         </select>
                       </div>
@@ -87,17 +116,33 @@
                   <div class="form-row">
                       <div class="form-group col-md-6">
                         <label for="inputEmail4">Linea</label>
-                        <input type="email" class="form-control" id="inputEmail4" placeholder="No de lista ">
+                        <input
+                          type="text" 
+                          id="idLineaPre"
+                          class="form-control"
+                          name="idLineaPre"
+                          #nombre="ngModel"
+                          [(ngModel)]="oBuscar.ArticuloLinea"
+                          required
+                        >
                       </div>
                       <div class="form-group col-md-6">
                         <label for="inputPassword4">Clave</label>
-                        <input type="text" class="form-control" id="" placeholder="">
+                        <input
+                          type="text" 
+                          id="idClvPre"
+                          class="form-control"
+                          name="idClvPre"
+                          #nombre="ngModel"
+                          [(ngModel)]="oBuscar.ArticuloCodigo"
+                          required
+                        >
                       </div>
                   </div>
 
                   <div class="form-row">
                       <div class="form-group col-md-6">
-                          <button type="submit" class="btn btn-primary">BUSCAR</button>
+                          <button type="submit" (click)="consultaPrecios()" class="btn btn-primary">BUSCAR</button>
                       </div>
                   </div>            
 
