--- a/src/app/components/estadocuenta/estadocuenta.component.html
+++ b/src/app/components/estadocuenta/estadocuenta.component.html
@@ -13,7 +13,8 @@
     <mat-sidenav-container class="example-sidenav-container"
                            [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
       <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
-                   [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
+                   [fixedInViewport]="mobileQuery.matches" fixedTopGap="56"
+                   [opened]="mobileQuery.matches ? 'false' : 'true'">
         <mat-nav-list>
         
           <a mat-list-item [routerLink]="['/distribuidores/']">Inicio</a>
@@ -22,8 +23,8 @@
           <a mat-list-item [routerLink]="['/distribuidores/consultapedidos/']">Consulta de Pedidos</a>
           <a mat-list-item [routerLink]="['/distribuidores/relacionpedidos/']">Relación de Pedidos</a>
           <a mat-list-item [routerLink]="['/distribuidores/estadocuenta/']">Estado de Cuenta</a>
-          <a mat-list-item [routerLink]="['/distribuidores/ventasclientearticulo/']">Ventas por Cliente y Artículo</a>
-          <a mat-list-item href="http://www.catalogofonelli.com.mx/" target="_blank">Catálogo de Joyería</a>
+          <a mat-list-item [routerLink]="['/distribuidores/ventasclientearticulo/']">Ventas por Artículo</a>
+          
         </mat-nav-list>
       </mat-sidenav>
   
@@ -42,12 +43,28 @@
   
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                          <label for="inputEmail4">Desde cliente</label>
-                          <input type="email" class="form-control" id="inputEmail4" placeholder="">
+                          <label >Desde cliente</label>
+                          <input 
+                            type="text" 
+                            id="idDesCli"
+                            class="form-control"
+                            name="idDesCli"
+                            #nombre="ngModel"
+                            [(ngModel)]="oBuscar.ClienteDesde"
+                            required
+                          >
                         </div>
                         <div class="form-group col-md-6">
-                          <label for="inputPassword4">Filial</label>
-                          <input type="password" class="form-control" id="inputPassword" placeholder="0">
+                          <label >Filial</label>
+                          <input 
+                            type="text" 
+                            id="idDesFil"
+                            class="form-control"
+                            name="idDesFil"
+                            #nombre="ngModel"
+                            [(ngModel)]="oBuscar.FiliadDesde"
+                            required
+                          >
                         </div>
   
                         
@@ -55,12 +72,28 @@
   
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                          <label for="inputEmail4">Hasta cliente</label>
-                          <input type="password" class="form-control" id="inputPassword" placeholder="99999">
+                          <label >Hasta cliente</label>
+                          <input 
+                            type="text" 
+                            id="idHasCli"
+                            class="form-control"
+                            name="idHasCli"
+                            #nombre="ngModel"
+                            [(ngModel)]="oBuscar.ClienteHasta"
+                            required
+                          >
                         </div>
                         <div class="form-group col-md-6">
-                          <label for="inputPassword4">Filial</label>
-                          <input type="text" class="form-control" id="" placeholder="99">
+                          <label >Filial</label>
+                          <input 
+                            type="text" 
+                            id="idHasFil"
+                            class="form-control"
+                            name="idHasFil"
+                            #nombre="ngModel"
+                            [(ngModel)]="oBuscar.FilialHasta"
+                            required
+                          >
                         </div>
                     </div>
   
@@ -68,21 +101,37 @@
   
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                          <label for="inputEmail4">Desde cartera</label>
-                          <input type="email" class="form-control" id="inputEmail4" placeholder="">
+                          <label>Desde cartera</label>
+                          <input 
+                            type="text" 
+                            id="idDesCar"
+                            class="form-control"
+                            name="idDesCar"
+                            #nombre="ngModel"
+                            [(ngModel)]="oBuscar.CarteraDesde"
+                            required
+                          >
                         </div>
                         <div class="form-group col-md-6">
-                          <label for="inputPassword4">Hasta cartera</label>
-                          <input type="text" class="form-control" id="" placeholder="Z">
+                          <label>Hasta cartera</label>
+                          <input 
+                            type="text" 
+                            id="idHasCar"
+                            class="form-control"
+                            name="idHasCar"
+                            #nombre="ngModel"
+                            [(ngModel)]="oBuscar.CarteraHasta"
+                            required
+                          >
                         </div>
                     </div>
   
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <button type="submit" class="btn btn-primary">BUSCAR</button>
+                            <button type="submit" (click)="consultaEstadoCuenta()" class="btn btn-primary">BUSCAR</button>
                         </div>
                         <div class="form-group col-md-6">
-                          <button type="submit" class="btn btn-primary">CATALOGO DE CLIENTES</button>
+                          <button type="submit"  class="btn btn-primary">CATALOGO DE CLIENTES</button>
                       </div>
                     </div>            
   
