--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,39 +6,39 @@
   <ngb-carousel >
     <ng-template ngbSlide>
       <div class="picsum-img-wrapper">
-        <img src="../assets/images/prueba.png" alt="Random first slide">
+        <img src="../assets/images/img_4.jpg" >
       </div>
-      <div class="carousel-caption">
+      <!-- <div class="carousel-caption">
         <h3>10 seconds between slides...</h3>
         <p>This carousel uses customized default values.</p>
-      </div>
+      </div> -->
     </ng-template>
     <ng-template ngbSlide>
       <div class="picsum-img-wrapper">
-        <img src="../assets/images/Banner web5.png" alt="Random second slide">
+        <img src="../assets/images/img_4.jpg" >
       </div>
-      <div class="carousel-caption">
+      <!-- <div class="carousel-caption">
         <h3>No mouse events...</h3>
         <p>This carousel doesn't pause or resume on mouse events</p>
-      </div>
+      </div> -->
     </ng-template>
     <ng-template ngbSlide>
       <div class="picsum-img-wrapper">
-        <img src="../assets/images/Banner web3.png"  alt="Random third slide">
+        <img src="../assets/images/img_4.jpg"  >
       </div>
-      <div class="carousel-caption">
+      <!-- <div class="carousel-caption">
         <h3>No keyboard...</h3>
         <p>This carousel uses customized default values.</p>
-      </div>
+      </div> -->
     </ng-template>
     <ng-template ngbSlide>
       <div class="picsum-img-wrapper">
-        <img src="../assets/images/img_4.jpg" alt="Random fourth slide">
+        <img src="../assets/images/img_4.jpg" >
       </div>
-      <div class="carousel-caption">
+      <!-- <div class="carousel-caption">
         <h3>And no wrap after last slide.</h3>
         <p>This carousel uses customized default values.</p>
-      </div>
+      </div> -->
     </ng-template>
   </ngb-carousel>
   
@@ -54,7 +54,7 @@
                 <p class="font1">Mas de 8000</p>
                   <div class="news-thumb">
                       <a href="news-detail.html" class="news-image-hover news-image-hover-warning">
-                          <img src="../../../assets/images/principal/carrucel/dije.JPG" class="img-fluid large-news-image news-image" alt="">
+                          <img src="../../../assets/images/Joyas.gif" class="img-fluid large-news-image news-image" alt="">
                       </a>  
                       <p class="font1">Diseños diferentes.</p>                                                               
                   </div> 
@@ -66,7 +66,7 @@
                 <p class="font1">600 distribuidores</p>
                   <div class="news-thumb" >
                       <a href="news-detail.html" class="news-image-hover news-image-hover-warning">
-                          <img src="../../../assets/images/principal/carrucel/dije.JPG" class="img-fluid large-news-image news-image" alt="">
+                          <img src="../../../assets/images/Alcance.gif" class="img-fluid large-news-image news-image" alt="">
                       </a>                                                               
                       <p class="font1">en todo el país</p>                                                               
                   </div>  
@@ -77,7 +77,7 @@
                   <div class="news-thumb" >
                       
                       <a href="news-detail.html" class="news-image-hover news-image-hover-warning">
-                          <img src="../../../assets/images/principal/carrucel/dije.JPG" class="img-fluid large-news-image news-image" alt="">
+                          <img src="../../../assets/images/Puntos.gif" class="img-fluid large-news-image news-image" alt="">
                       </a>                                            
                       <p class="font1">2000 puntos de venta</p>                                                                                
                   </div> 
@@ -107,7 +107,7 @@
                   <div class="images_main" >
                       <div class="images_left" >
                         <div class="container_1">
-                          <img src="../../../assets/images/img_2.jpg"  alt="Avatar" class="rounded" style="width:100%">
+                          <img src="../../../assets/images/f1.png"  alt="Avatar" class="rounded" style="width:100%">
                           <div class="middle">
                             <!-- <div class="text"><img src="images/search-icon.png"></div> -->
                             
@@ -115,20 +115,20 @@
                         </div>
                         <br>
                         <div class="container_1">
-                          <img src="../../../assets/images/img_3.jpg" alt="Avatar" class="rounded" style="width:100%">
+                          <img src="../../../assets/images/2.png" alt="Avatar" class="rounded" style="width:100%">
             
                         </div>
                       </div>
                       <div class="images_right">
                         <div class="container_1">
-                          <img src="../../../assets/images/img-4.png" alt="Avatar" class="rounded" style="width:100%">
+                          <img src="../../../assets/images/3.png" alt="Avatar" class="rounded" style="width:100%">
                           <div class="middle">
                             <br>
                          
                           </div>
                         </div>
                         <div class="container_1">
-                          <img src="../../../assets/images/img-5.png" alt="Avatar" class="rounded" style="width:100%">
+                          <img src="../../../assets/images/5.png" alt="Avatar" class="rounded" style="width:100%">
                           <div class="middle">
                             <br>
                        
@@ -148,7 +148,7 @@
   
   
   <div style="width: 100%">
-      <img src="../../../assets/images/principal/carrucel/anillo.JPG" class="img-fluid news-image">   
+      <img src="../../../assets/images/Final.png" class="img-fluid news-image">   
   </div>
   
   <!-- <div style="width: 100%"><iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=5%20de%20febrero%20No.%20442%20Planta%20Baja,%20interior%20A,%20Algar%C3%ADn,%2006880%20Ciudad%20de%20M%C3%A9xico,%20CDMX+(Fonelli)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/car-satnav-gps/">Car Navigation Systems</a></iframe></div>  -->
