--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -2,6 +2,7 @@
 <div class="example-container" [class.example-is-mobile]="mobileQuery.matches" *ngIf="shouldRun">
   <mat-toolbar >
     <button class="btn btn-primary" (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
+    
     <div class="cat ">
       <a href="#">
         <img  src="../../../assets/images/principal/logo_fonelli.png"  >
@@ -12,7 +13,8 @@
   <mat-sidenav-container class="example-sidenav-container"
                          [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
     <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
-                 [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
+                 [fixedInViewport]="mobileQuery.matches" fixedTopGap="56"
+                 [opened]="mobileQuery.matches ? 'false' : 'true'">
       <mat-nav-list>
       
         <a mat-list-item [routerLink]="['/distribuidores/']">Inicio</a>
@@ -21,8 +23,8 @@
         <a mat-list-item [routerLink]="['/distribuidores/consultapedidos/']">Consulta de Pedidos</a>
         <a mat-list-item [routerLink]="['/distribuidores/relacionpedidos/']">Relación de Pedidos</a>
         <a mat-list-item [routerLink]="['/distribuidores/estadocuenta/']">Estado de Cuenta</a>
-        <a mat-list-item [routerLink]="['/distribuidores/ventasclientearticulo/']">Ventas por Cliente y Artículo</a>
-        <a mat-list-item href="http://www.catalogofonelli.com.mx/" target="_blank">Catálogo de Joyería</a>
+        <a mat-list-item [routerLink]="['/distribuidores/ventasclientearticulo/']">Ventas por Artículo</a>
+        
       </mat-nav-list>
     </mat-sidenav>
 
