--- a/src/assets/css/bootstrap/bootstrap.css
+++ b/src/assets/css/bootstrap/bootstrap.css
@@ -4500,11 +4500,8 @@ button.close {
   line-height: 1.5; }
 
 .modal-body {
-  position: relative;
-  -webkit-box-flex: 1;
-  -ms-flex: 1 1 auto;
-  flex: 1 1 auto;
-  padding: 1rem; }
+  max-height:150px;
+  overflow:auto;}
 
 .modal-footer {
   display: -webkit-box;
