--- a/src/assets/css/demo.css
+++ b/src/assets/css/demo.css
@@ -64,7 +64,7 @@
     color: #FFFFFF;
 }
 
-.table-upgrade td:nth-child(2),
+/* .table-upgrade td:nth-child(2),
 .table-upgrade td:nth-child(3){
     text-align: center;
-}
+} */
