--- a/src/assets/css/templatemo-nomad-force.css
+++ b/src/assets/css/templatemo-nomad-force.css
@@ -604,7 +604,7 @@ label.title {
   SITE FOOTER               
 -----------------------------------------*/
 .site-footer {
-  background: var(--dark-color);
+  background: #00a1ca;
   padding-top: 1.0rem;
   padding-bottom: 2.0rem;
   height: 10px;
@@ -735,7 +735,12 @@ label.title {
 }
 
 .cat {
-  height:50px  
+  height:50px ; 
+  padding-left:30px;
+ }
+ .pie {
+  height:20px ; 
+  margin-top: 2px;
  }
  img {
   min-height: 100%; 
